# modified_FARSIGHT

./: CMakeLists.txt  README.md  run_FARRSIGHT.cpp
inc/: AMRStructure.hpp  FieldStructure.hpp
new_interface/: FARRSIGHT_Interface.py  deck.json  diag.sh  farrsight_cpu  myhob.sh  pic.sh
src/: CMakeLists.txt  FieldStructure.cpp
